syntax = "proto3";

package goclaw.v1;

option go_package = "github.com/goclaw/goclaw/pkg/grpc/pb/v1;pbv1";

import "goclaw/v1/common.proto";

// SignalService provides task signaling operations.
service SignalService {
  rpc SignalTask(SignalTaskRequest) returns (SignalTaskResponse);
}

// SignalType defines the kind of signal to send.
enum SignalType {
  SIGNAL_TYPE_UNSPECIFIED = 0;
  SIGNAL_TYPE_STEER = 1;
  SIGNAL_TYPE_INTERRUPT = 2;
  SIGNAL_TYPE_COLLECT = 3;
}

// SignalTaskRequest sends a signal to a task or tasks.
message SignalTaskRequest {
  SignalType type = 1;
  string task_id = 2;
  repeated string task_ids = 3;
  map<string, string> parameters = 4;
  bool graceful = 5;
  string reason = 6;
  int64 timeout_ms = 7;
}

// CollectResult represents a single task result from a collect operation.
message CollectResult {
  string task_id = 1;
  bytes result_data = 2;
  string error_message = 3;
}

// SignalTaskResponse reports the result of a signal request.
message SignalTaskResponse {
  bool success = 1;
  repeated CollectResult results = 2;
  Error error = 3;
}
